@@ -26,85 +26,92 @@
 #define LOOPER_LAPACK_H
 
 #include <looper/fortran.h>
-#include <algorithm>
+
 #include <boost/numeric/ublas/matrix.hpp>
 #include <boost/numeric/ublas/vector.hpp>
+
+#include <algorithm>
 #include <complex>
 #include <stdexcept>
-#include <vector>
 
 #if defined(c_plusplus) || defined(__cplusplus)
 extern "C" {
 #endif
 
-// Simple Driver Routines for Eigenvalue Problems for
-// Symmetric/Hermitian Matrixes
+//
+// Simple Driver Routines for Eigenvalue Problems for Symmetric/Hermitian
+// Matrixes
+//
 
-// SSYEV: compute all eigenvalues and, optionally, eigenvectors of a
-// real symmetric matrix (single precision, simple driver)
-void LOOPER_FCALL(ssyev,SSYEV)(const char& jobz, const char& uplo, const int& n,
-                             float a[], const int& lda,
-                             float w[],
-                             float work[],
-                             const int& lwork, int& info);
+// ?SYEV: Computes all eigenvalues and, optionally, eigenvectors of a
+// real symmetric/complex Hermite matrix
 
-// DSYEV: compute all eigenvalues and, optionally, eigenvectors of a
-// real symmetric matrix (double precision, simple driver)
-void LOOPER_FCALL(dsyev,DSYEV)(const char& jobz, const char& uplo, const int& n,
-                             double a[], const int& lda,
-                             double w[],
-                             double work[],
-                             const int& lwork, int& info);
+void LOOPER_FCALL(ssyev,SSYEV)(const char& jobz, const char& uplo,
+                               const int& n,
+                               float a[], const int& lda,
+                               float w[],
+                               float work[], const int& lwork,
+                               int& info);
 
-// CHEEV: compute all eigenvalues and, optionally, eigenvectors of a
-// complex Hermitian matrix (single precision, simple driver)
-void LOOPER_FCALL(cheev,CHEEV)(const char& jobz, const char& uplo, const int& n,
-                             std::complex<float> a[], const int& lda,
-                             float w[],
-                             std::complex<float> work[],
-                             const int& lwork,
-                             float rwork[],
-                             int& info);
+void LOOPER_FCALL(dsyev,DSYEV)(const char& jobz, const char& uplo,
+                               const int& n,
+                               double a[], const int& lda,
+                               double w[],
+                               double work[], const int& lwork,
+                               int& info);
 
-// ZHEEV: compute all eigenvalues and, optionally, eigenvectors of a
-// complex Hermitian matrix (double precision, simple driver)
-void LOOPER_FCALL(zheev,ZHEEV)(const char& jobz, const char& uplo, const int& n,
-                             std::complex<double> a[], const int& lda,
-                             double w[],
-                             std::complex<double> work[],
-                             const int& lwork,
-                             double rwork[],
-                             int& info);
+void LOOPER_FCALL(cheev,CHEEV)(const char& jobz, const char& uplo,
+                               const int& n,
+                               std::complex<float> a[], const int& lda,
+                               float w[],
+                               std::complex<float> work[], const int& lwork,
+                               float rwork[],
+                               int& info);
 
-// Simple Driver Routines for Solving Linear Equations for General Matrices
+void LOOPER_FCALL(zheev,ZHEEV)(const char& jobz, const char& uplo,
+                               const int& n,
+                               std::complex<double> a[], const int& lda,
+                               double w[],
+                               std::complex<double> work[], const int& lwork,
+                               double rwork[],
+                               int& info);
 
-// SGESV:
-void LOOPER_FCALL(sgesv,SGESV)(const int& n, const int& nrhs, 
-			       float a[], const int& lda,
-			       int ipiv[],
-			       float b[], const int& lbd,
-			       int& info);
+//
+// Simple Driver Routines for Solving Least Squares Problems
+//
 
-// DGESV:
-void LOOPER_FCALL(dgesv,DGESV)(const int& n, const int& nrhs, 
-			       double a[], const int& lda,
-			       int ipiv[],
-			       double b[], const int& lbd,
-			       int& info);
+// ?GELS: Computes the least squares solution to an over-determined system
+// of linear equations, A X=B or A**H X=B, or the minimum norm solution of
+// an under-determined system, where A is a general rectangular matrix of
+// full rank, using a QR or LQ factorization of A.
 
-// CGESV:
-void LOOPER_FCALL(cgesv,CGESV)(const int& n, const int& nrhs, 
-			       std::complex<float> a[], const int& lda,
-			       int ipiv[],
-			       std::complex<float> b[], const int& lbd,
-			       int& info);
+void LOOPER_FCALL(sgels,SGELS)(const char& trans, const int& m, const int& n,
+                               const int& nrhs,
+                               float a[], const int& lda,
+                               float b[], const int& ldb,
+                               float work[], const int& lwork,
+                               int& info);
 
-// ZGESV:
-void LOOPER_FCALL(zgesv,ZGESV)(const int& n, const int& nrhs, 
-			       std::complex<double> a[], const int& lda,
-			       int ipiv[],
-			       std::complex<double> b[], const int& lbd,
-			       int& info);
+void LOOPER_FCALL(dgels,DGELS)(const char& trans, const int& m, const int& n,
+                               const int& nrhs,
+                               double a[], const int& lda,
+                               double b[], const int& ldb,
+                               double work[], const int& lwork,
+                               int& info);
+
+void LOOPER_FCALL(cgels,CGELS)(const char& trans, const int& m, const int& n,
+                               const int& nrhs,
+                               std::complex<float> a[], const int& lda,
+                               std::complex<float> b[], const int& ldb,
+                               std::complex<float> work[], const int& lwork,
+                               int& info);
+
+void LOOPER_FCALL(zgels,ZGELS)(const char& trans, const int& m, const int& n,
+                               const int& nrhs,
+                               std::complex<double> a[], const int& lda,
+                               std::complex<double> b[], const int& ldb,
+                               std::complex<double> work[], const int& lwork,
+                               int& info);
 
 #if defined(c_plusplus) || defined(__cplusplus)
 }
@@ -114,9 +121,9 @@ namespace looper {
 
 namespace lapack_dispatch {
 
-inline void syev(const char & jobz, const char& uplo, const int& n,
+inline void syev(const char& jobz, const char& uplo, const int& n,
                  float a[], const int& lda, float w[],
-                 int & info) {
+                 int& info) {
   // check optimal size of lwork
   int lwork = -1;
   float* work  = new float[1];
@@ -130,9 +137,9 @@ inline void syev(const char & jobz, const char& uplo, const int& n,
   delete [] work;
 }
 
-inline void syev(const char & jobz, const char& uplo, const int& n,
+inline void syev(const char& jobz, const char& uplo, const int& n,
                  double a[], const int& lda, double w[],
-                 int & info) {
+                 int& info) {
   // check optimal size of lwork
   int lwork = -1;
   double* work  = new double[1];
@@ -146,9 +153,9 @@ inline void syev(const char & jobz, const char& uplo, const int& n,
   delete [] work;
 }
 
-inline void syev(const char & jobz, const char& uplo, const int& n,
+inline void syev(const char& jobz, const char& uplo, const int& n,
                  std::complex<float> a[], const int& lda, float w[],
-                 int & info) {
+                 int& info) {
   // check optimal size of lwork
   int lwork = -1;
   std::complex<float>* work  = new std::complex<float>[1];
@@ -164,9 +171,9 @@ inline void syev(const char & jobz, const char& uplo, const int& n,
   delete [] work;
 }
 
-inline void syev(const char & jobz, const char& uplo, const int& n,
+inline void syev(const char& jobz, const char& uplo, const int& n,
                  std::complex<double> a[], const int& lda, double w[],
-                 int & info) {
+                 int& info) {
   // check optimal size of lwork
   int lwork = -1;
   std::complex<double>* work  = new std::complex<double>[1];
@@ -182,28 +189,28 @@ inline void syev(const char & jobz, const char& uplo, const int& n,
   delete [] work;
 }
 
-inline void gesv(const int& n, const int& nrhs,
-		 float a[], const int& lda, int ipiv[],
-		 float b[], const int& ldb, int& info) {
-  LOOPER_FCALL(sgesv,SGESV)(n, nrhs, a, lda, ipiv, b, ldb, info);
+inline void gels(const char& trans, const int& m, const int& n,
+                 const int& nrhs,
+                 float a[], const int& lda,
+                 float b[], const int& ldb,
+                 int& info) {
+  int lwork = std::min(m,n) + std::max(std::max(1,m), std::max(n,nrhs)) * 64;
+  float* work  = new float[lwork];
+  LOOPER_FCALL(sgels,SGELS)(trans, m, n, nrhs, a, lda, b, ldb,
+                            work, lwork,info);
+  delete [] work;
 }
 
-inline void gesv(const int& n, const int& nrhs,
-		 double a[], const int& lda, int ipiv[],
-		 double b[], const int& ldb, int& info) {
-  LOOPER_FCALL(dgesv,DGESV)(n, nrhs, a, lda, ipiv, b, ldb, info);
-}
-
-inline void gesv(const int& n, const int& nrhs,
-		 std::complex<float> a[], const int& lda, int ipiv[],
-		 std::complex<float> b[], const int& ldb, int& info) {
-  LOOPER_FCALL(cgesv,CGESV)(n, nrhs, a, lda, ipiv, b, ldb, info);
-}
-
-inline void gesv(const int& n, const int& nrhs,
-		 std::complex<double> a[], const int& lda, int ipiv[],
-		 std::complex<double> b[], const int& ldb, int& info) {
-  LOOPER_FCALL(zgesv,ZGESV)(n, nrhs, a, lda, ipiv, b, ldb, info);
+inline void gels(const char& trans, const int& m, const int& n,
+                 const int& nrhs,
+                 double a[], const int& lda,
+                 double b[], const int& ldb,
+                 int& info) {
+  int lwork = std::min(m,n) + std::max(std::max(1,m), std::max(n,nrhs)) * 64;
+  double* work  = new double[lwork];
+  LOOPER_FCALL(dgels,DGELS)(trans, m, n, nrhs, a, lda, b, ldb,
+                            work, lwork,info);
+  delete [] work;
 }
 
 } // namespace lapack_dispatch
@@ -223,12 +230,32 @@ struct vector_helper<boost::numeric::ublas::vector<T> >
 
 template<class T> struct matrix_helper;
 
-template<class T>
-struct matrix_helper<boost::numeric::ublas::matrix<T> >
+template<class T, class A>
+struct matrix_helper<
+  boost::numeric::ublas::matrix<T,boost::numeric::ublas::row_major,A> >
 {
-  typedef T                                value_type;
-  typedef boost::numeric::ublas::matrix<T> matrix_type;
+  typedef T value_type;
+  typedef boost::numeric::ublas::matrix<T,
+            boost::numeric::ublas::row_major,A> matrix_type;
+  BOOST_STATIC_CONSTANT(bool, is_row_major = true);
+  BOOST_STATIC_CONSTANT(bool, is_column_major = false);
   static value_type * begin_ptr(matrix_type& m) { return &m(0, 0); }
+  static int size1(const matrix_type& m) { return m.size1(); }
+  static int size2(const matrix_type& m) { return m.size2(); }
+};
+
+template<class T, class A>
+struct matrix_helper<
+  boost::numeric::ublas::matrix<T,boost::numeric::ublas::column_major,A> >
+{
+  typedef T value_type;
+  typedef boost::numeric::ublas::matrix<T,
+            boost::numeric::ublas::column_major,A> matrix_type;
+  BOOST_STATIC_CONSTANT(bool, is_row_major = false);
+  BOOST_STATIC_CONSTANT(bool, is_column_major = true);
+  static value_type * begin_ptr(matrix_type& m) { return &m(0, 0); }
+  static int size1(const matrix_type& m) { return m.size1(); }
+  static int size2(const matrix_type& m) { return m.size2(); }
 };
 
 }
@@ -236,6 +263,10 @@ struct matrix_helper<boost::numeric::ublas::matrix<T> >
 template <class Matrix, class Vector>
 inline void diagonalize(Matrix& a, Vector& w, bool need_eigenvectors = true)
 {
+  // size check
+  assert(matrix_helper<Matrix>::size1(a) == matrix_helper<Matrix>::size2(a));
+  assert(matrix_helper<Matrix>::size1(a) == vector_helper<Vector>::size(w));
+
   char jobz;
   if (need_eigenvectors) {
     jobz = 'V';
@@ -256,18 +287,49 @@ inline void diagonalize(Matrix& a, Vector& w, bool need_eigenvectors = true)
 }
 
 template <class Matrix, class Vector>
-inline void solve_leq(Matrix& a, Vector& b)
+inline void solve_llsp(Matrix& a, Vector& b, Vector& x)
 {
-  int n = vector_helper<Vector>::size(b);
-  int info;
+  int m = matrix_helper<Matrix>::size1(a);
+  int n = matrix_helper<Matrix>::size2(a);
 
-  // call dispatcher
-  int* ipiv = new int[n];
-  lapack_dispatch::gesvv(n, 1,
-			 matrix_helper<Matrix>::begin_ptr(a), n, ipiv,
-			 vector_helper<Vector>::begin_ptr(b), n, info);
-  delete [] ipiv;
-  if (info != 0) throw std::runtime_error("failed in gesv");
+  // size check
+  assert(vector_helper<Vector>::size(b) == m);
+  assert(vector_helper<Vector>::size(x) == n);
+
+  char trans;
+  int info;
+  if (matrix_helper<Matrix>::is_column_major) {
+    trans = 'N';
+    if (m >= n) {
+      lapack_dispatch::gels(trans, m, n, 1,
+                            matrix_helper<Matrix>::begin_ptr(a), m,
+                            vector_helper<Vector>::begin_ptr(b), m,
+                            info);
+      std::copy(b.begin(), b.begin() + n, x.begin());
+    } else {
+      std::copy(b.begin(), b.begin() + m, x.begin());
+      lapack_dispatch::gels(trans, m, n, 1,
+                            matrix_helper<Matrix>::begin_ptr(a), m,
+                            vector_helper<Vector>::begin_ptr(x), n,
+                            info);
+    }
+  } else {
+    trans = 'T';
+    if (m >= n) {
+      lapack_dispatch::gels(trans, n, m, 1,
+                            matrix_helper<Matrix>::begin_ptr(a), n,
+                            vector_helper<Vector>::begin_ptr(b), m,
+                            info);
+      std::copy(b.begin(), b.begin() + n, x.begin());
+    } else {
+      std::copy(b.begin(), b.begin() + m, x.begin());
+      lapack_dispatch::gels(trans, n, m, 1,
+                            matrix_helper<Matrix>::begin_ptr(a), n,
+                            vector_helper<Vector>::begin_ptr(x), n,
+                            info);
+    }
+  }
+  if (info != 0) throw std::runtime_error("failed in gels");
 }
 
 } // end namespace looper
